Fix #157: Make draft column scrollable on overflow.

--- a/public/style.css
+++ b/public/style.css
@@ -389,6 +389,10 @@ li.load-more {
 
 /* Draft form */
 
+.draft .panel-body {
+  overflow: auto;
+}
+
 .form {
   clear: both;
 }
